api/swim_schema/src/schema/tests/derive/validated_form/all_items_skipped.stderr
error: All items schema not valid when all fields are skipped
  --> $DIR/src/schema/tests/derive/validated_form/all_items_skipped.rs:18:14
   |
18 |     #[derive(ValueSchema)]
   |              ^^^^^^^^^^^
